--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
                 <div id="header">
                     <div class="inner">
 						<!-- begin notification bar -->
-                        <div class="notify-bar  hide">
+                        <div class="notify-bar hidden">
                             <div class="container">
                                 <div class="row">
                                     <div class="span11">
@@ -39,7 +39,7 @@
                                 <div class="row">                                            
                                     <div class="contacts_block">
                                     	<!-- edit phone number here -->
-                                        <div class="phone styler_color">CALL US TODAY! <span>714-633-7686</span></div>
+                                        <div class="phone styler_color">CALL US NOW! <span>714-633-7686</span></div>
                                         <div class="clear"></div>
                                     </div>
                                 </div>
@@ -92,11 +92,9 @@
 						<div class="slide slide1">
 							<img alt="" src="img/slide1.png" />
 							<div class="container">
-								<p class="cap-1">Attention: Individual, Family and Business Owners</p>
-								<p class="cap-2">Are you prepared to comply with the new Healthcare Law - The ACA?</p>
-                                <div class="mc_portrait">
-                                    <img alt="" src="img/mcchiang.jpg" width="214" height="285"/>
-                                </div>
+                                <p class="cap-1">Attention: Individual, Family and Business Owners</p>
+                                <p class="cap-2">Are you prepared to comply with the new Healthcare Law - The ACA?</p>
+                                <p class="cap-3"></p>
 							</div>
 						</div>
                     </div>
@@ -107,12 +105,7 @@
 						<!-- begin award bar -->
                         <div class="honors">
 							<ul class="clearfix">
-								<li><a href="#"><img src="img/awards/award1.png" alt="" /></a></li>
-								<li><a href="#"><img src="img/awards/award2.png" alt="" /></a></li>
-								<li><a href="#"><img src="img/awards/award3.png" alt="" /></a></li>
-								<li><a href="#"><img src="img/awards/award4.png" alt="" /></a></li>
-								<li><a href="#"><img src="img/awards/award5.png" alt="" /></a></li>
-								<li><a href="#"><img src="img/awards/award6.png" alt="" /></a></li>
+								<li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
 							</ul>
 						</div>
 						<!-- /end award bar -->
