--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,12 @@
                         <div class="honors">
 							<ul class="clearfix">
 								<li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
-							</ul>
+                                <li><div class="servingsince">
+                                    <p>Service since 2002: <strong>Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties</strong></p>
+                                    <p><strong>Covered CA, Medicare, Individual, Group Health, Dental, Vision, Life, Term, IUL, Annuities</strong></p>
+                                    <p><strong>English, Chinese, Spanish &amp; Portuguese</strong></p>
+                                </div></li>
+                            </ul>
 						</div>
 						<!-- /end award bar -->
 						
