--- a/src/index.html
+++ b/src/index.html
@@ -655,7 +655,7 @@
                                 <div class="info">
                                     <div class="header">Michael Chiang Insurance</div>
                                     <div class="text">
-                                        <p>CA Insurance License: #0D65762</p>
+                                        <p>CA Insurance License#: 0D65762</p>
                                         <p>714-633-7686</p>
                                         <p><a href="mailto:insfreedom@gmail.com">insfreedom@gmail.com</a></p>
                                         <p><a href="mailto:chiangmsc@yahoo.com">chiangmsc@yahoo.com</a></p>
