--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,12 @@
 						<!-- begin award bar -->
                         <div class="honors">
 							<ul class="clearfix">
-								<li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
+								<li>
+                                    <ul>
+                                        <li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
+                                        <li><a href="http://www.medicare.gov"><img src="img/medicare_card.jpg" alt="Medicare" /></a></li>
+                                    </ul>
+                                </li>
                                 <li><div class="servingsince">
                                     <p>Service since 2002: <strong>Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties</strong></p>
                                     <p><strong>Covered CA, Medicare, Individual, Group Health, Dental, Vision, Life, Term, IUL, Annuities</strong></p>
