--- a/src/index.html
+++ b/src/index.html
@@ -92,8 +92,8 @@
 						<div class="slide slide1">
 							<img alt="" src="img/slide1.png" />
 							<div class="container">
-                                <p class="cap-1">Attention: Individual, Family and Business Owners</p>
-                                <p class="cap-2">Are you prepared to comply with the new Healthcare Law - The ACA?</p>
+                                <p class="cap-1">Are you prepared to comply with the new Healthcare Law - The ACA?</p>
+                                <p class="cap-2">Confused about Medicare?</p>
                                 <p class="cap-3"></p>
 							</div>
 						</div>
