--- a/src/index.html
+++ b/src/index.html
@@ -108,6 +108,8 @@
                                 <li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
                                 <li><a href="http://www.medicare.gov"><img src="img/medicare_card.jpg" alt="Medicare" /></a></li>
                                 <li><a href="http://www.ssa.gov"><img src="img/ssa.gif" alt="Social Secutiry" /></a></li>
+                                <li><div class="since">Service since 2002: <strong>Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties</strong></br>
+                                    Speaks: <strong>English, Chinese, Spanish &amp; Portuguese</strong></div></li>
                             </ul>
 						</div>
 						<!-- /end award bar -->
@@ -137,9 +139,17 @@
 
                                     <hr>
 
-                                    <p>Service since 2002: <strong>Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties</strong></p>
-                                    <p><strong>Covered CA, Medicare, Individual, Group Health, Dental, Vision, Life, Term, IUL, Annuities</strong></p>
-                                    <p><strong>English, Chinese, Spanish &amp; Portuguese</strong></p>
+                                    <p>
+                                        Service since 2002: Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties
+                                    </p>
+
+                                    <p>
+                                        Speaks: English, Chinese, Spanish &amp; Portuguese
+                                    </p>
+
+                                    <p>
+                                        Covered CA | Medicare | Individual | Group Health | Dental | Vision | Life | Term | IUL | Annuities
+                                    </p>
                                 </div>
                                 <!-- /end welcome -->
 							</div>
