--- a/src/index.html
+++ b/src/index.html
@@ -36,14 +36,16 @@
                         <!-- /end notification bar -->
                         <div class="top">
                             <div class="container">
-                                <div class="row">                                            
-                                    <div class="contacts_block">
-                                    	<!-- edit phone number here -->
-                                        <div class="phone styler_color">
-                                            <a href="mailto:insurance4solutions@gmail.com">insurance4solutions@gmail.com</a> |
-                                            CALL US NOW! <span>714-633-7686</span>
+                                <div class="row">
+                                    <div class="span3 mailto">
+                                        <a href="mailto:insurance4solutions@gmail.com">insurance4solutions@gmail.com</a>
+                                    </div>
+                                    <div class="span8">
+                                        <div class="contacts_block">
+                                            <!-- edit phone number here -->
+                                            <div class="phone styler_color">CALL US NOW! <span>714-633-7686</span></div>
+                                            <div class="clear"></div>
                                         </div>
-                                        <div class="clear"></div>
                                     </div>
                                 </div>
                             </div>
