--- a/src/index.html
+++ b/src/index.html
@@ -146,11 +146,11 @@
                                     </p>
 
                                     <p>
-                                        Speaks: English, Chinese, Spanish &amp; Portuguese
+                                        Speaks: English, Chinese &#20013;&#22283;&#30340;, Espa&ntilde;ol and Portugu&ecirc;s
                                     </p>
 
                                     <p>
-                                        Covered CA | Medicare | Individual | Group Health | Dental | Vision | Life | Term | IUL | Annuities
+                                        <em>Covered CA &#8226; Medicare &#8226; Individual &#8226; Group Health &#8226; Dental &#8226; Vision &#8226; Life &#8226; Term &#8226; IUL &#8226; Annuities</em>
                                     </p>
                                 </div>
                                 <!-- /end welcome -->
