--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
                                     <div class="span8">
                                         <div class="contacts_block">
                                             <!-- edit phone number here -->
-                                            <div class="phone styler_color">CALL US NOW! <span>714-633-7686</span></div>
+                                            <div class="phone styler_color">CALL US NOW! &nbsp; <span>714-633-7686</span></div>
                                             <div class="clear"></div>
                                         </div>
                                     </div>
