--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
                                 <div class="row">
                                     <div class="span11">
                                     	<!-- edit notification message here -->
-                                        <p>Optional notification bar for displaying important messages to your clients and colleagues. It only shows when you want it to.</p>
+                                        <p></p>
                                     </div>
                                     <div class="span1"><a href="#" class="notify-close"><i class="icon-remove-sign"></i></a></div>
                                 </div>
@@ -146,7 +146,7 @@
                                     </p>
 
                                     <p>
-                                        Speaks: English, Chinese &#20013;&#22283;&#30340;, Espa&ntilde;ol and Portugu&ecirc;s
+                                        Speaks: English, &#20013;&#22283;&#30340;, Espa&ntilde;ol and Portugu&ecirc;s
                                     </p>
 
                                     <p>
