--- a/src/index.html
+++ b/src/index.html
@@ -173,6 +173,7 @@
                                             <p>Tustin, CA 92780</p>
                                             <p>714-633-7686</p>
                                             <p><a id="mc_em2"></a></p>
+                                            <p><a href="http://www.naaip.org/mchiang">NAAIP</a></p>
                                         </div>
                                     </div>
                                 </div>
