Updated chinese kanji and title

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-        <title>ONELAW - One Page Template for Lawyers</title>
+        <title>Michael Chiang Insurance</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css" />
         <link type="text/css" rel="stylesheet" href="css/bootstrap-responsive.css" />
@@ -146,7 +146,7 @@
                                     </p>
 
                                     <p>
-                                        Speaks: English, &#20013;&#22283;&#30340;, Espa&ntilde;ol and Portugu&ecirc;s
+                                        Speaks: English, &#20013;&#25991;, Espa&ntilde;ol and Portugu&ecirc;s
                                     </p>
 
                                     <p>
