--- a/src/index.html
+++ b/src/index.html
@@ -110,7 +110,7 @@
                                 <li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
                                 <li><a href="http://www.medicare.gov"><img src="img/medicare_card.jpg" alt="Medicare" /></a></li>
                                 <li><a href="http://www.ssa.gov"><img src="img/ssa.gif" alt="Social Secutiry" /></a></li>
-                                <li><div class="since">Service since 2002: <strong>Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties</strong></br>
+                                <li><div class="since">Service since 2002: <strong>Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties &amp; Las Vegas, NV</strong></br>
                                     Speaks: <strong>English, Chinese, Spanish &amp; Portuguese</strong></div></li>
                             </ul>
 						</div>
@@ -142,7 +142,7 @@
                                     <hr>
 
                                     <p>
-                                        Service since 2002: Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties
+                                        Service since 2002: Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties &amp; Las Vegas, Nevada
                                     </p>
 
                                     <p>
