Added NV license

--- a/src/index.html
+++ b/src/index.html
@@ -164,10 +164,21 @@
                                 <div class="caption styler_color">CONTACT US</div>
 							</div>
 							<div class="row">
-                                <!-- begin address, phone & email -->
                                 <div class="span4">
                                     <div class="info">
                                         <div class="header">CA Insurance License: #0D65762</div>
+                                    </div>
+                                </div>
+                                <div class="span4">
+                                    <div class="info">
+                                        <div class="header">NV Insurance License: #869122</div>
+                                    </div>
+                                </div>
+                            </div>
+							<div class="row">
+                                <!-- begin address, phone & email -->
+                                <div class="span4">
+                                    <div class="info">
                                         <div class="text">
                                             <p>14471 Chamber Road, Suite 110</p>
                                             <p>Tustin, CA 92780</p>
@@ -179,7 +190,6 @@
                                 </div>
                                 <div class="span4">
                                     <div class="info">
-                                        <div class="header">&nbsp;</div>
                                         <div class="text">
                                             <p><em>Mailing Address:</em></p>
                                             <p>PO Box 1833</p>
