--- a/src/index.html
+++ b/src/index.html
@@ -73,6 +73,7 @@
                                                         	<!-- edit navigation menu -->
                                                             <li class="styler_parent_active"><a href="#home_anchor" class="styler_hover_bg_color styler_active_bg_color">Home</a></li>
                                                             <li class="styler_parent_active"><a href="#welcome_anchor" class="styler_hover_bg_color styler_active_bg_color">WELCOME</a></li>
+                                                            <li class="styler_parent_active"><a href="#medicare_anchor" class="styler_hover_bg_color styler_active_bg_color">MEDICARE 10</a></li>
                                                             <li class="styler_parent_active"><a href="#contact_anchor" class="styler_hover_bg_color styler_active_bg_color">CONTACT</a></li>
                                                             <!-- /end navigation menu -->
                                                         </ul>
@@ -157,7 +158,34 @@
 							</div>
 						</div>
 
-						<!-- begin contacts us -->
+                        <!-- begin faqs -->
+                        <div id="medicare_marker"></div>
+                        <div class="faq">
+                            <div class="caption styler_color">Ten Things You Should Know About Medicare</div>
+                            <div class="categories">
+                                <!-- faqs category 1 -->
+                                <div class="category">
+                                    <ul class="info_slides_mc">
+                                        <li><i class="arr"></i>Apply your Medicare Card (Part A & Part B), when turn 65 or disability at Social Security Administration Office.</li>
+                                        <li>
+                                            <i class="arr"></i>There are two ways to get Medicare: Original Medicare, provided by federal government or
+                                            by choosing a Medicare Advantage Plan (Part C). They are offered by private insurance companies.
+                                        </li>
+                                        <li><i class="arr"></i>With Original Medicare, you will pay a share of the cost.</li>
+                                        <li><i class="arr"></i>Medicare Supplement insurance helps to cover the medical costs gap.</li>
+                                        <li><i class="arr"></i>Prescription drug coverage helps limit drug costs.</li>
+                                        <li><i class="arr"></i>Know the different choices of Plans available in your area.</li>
+                                        <li><i class="arr"></i>Enroll at the right time. The Initial Enrollment Period (IEP).</li>
+                                        <li><i class="arr"></i>Review your choices yearly during Open Enrollment Period (OEP), October 15 to December 7.</li>
+                                        <li><i class="arr"></i>Special Election Period (SEP).</li>
+                                        <li><i class="arr"></i>Review your present coverage - working beyond 65.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- /end faqs -->
+
+                        <!-- begin contacts us -->
                         <div id="contact_marker"></div>
 						<div class="contacts">
 							<div class="row">
