Added a shim so contacts scrolls correctly;

--- a/src/index.html
+++ b/src/index.html
@@ -226,6 +226,8 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <div class="contacts_shim">&nbsp;</div>
                                 <!-- /end address, phone & email -->
 							</div>
 						</div>
