--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-        <title>Michael Chiang Insurance Advisor</title>
+        <title>Michael Chiang Insurance Services</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="css/bootstrap.css" />
         <link type="text/css" rel="stylesheet" href="css/bootstrap-responsive.css" />
@@ -56,7 +56,7 @@
                                 <div class="row">
                                     <div class="span3">
                                     	<!-- insert header logo here -->
-                                        <a href="#" id="logo"><img src="img/logo.png" alt="" /></a>
+                                        <a href="#" id="logo"><img src="img/logo2.png" alt="" /></a>
                                     </div>
                                     <div class="span9">
                                         <div id="top_menu">
