--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <link type="text/css" rel="stylesheet" href="js/rs-plugin/css/settings.css" />
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,700italic,400,600,700,800' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700' rel='stylesheet' type='text/css'>
-        <link type="text/css" rel="stylesheet" href="css/style.css" />
+        <link type="text/css" rel="stylesheet" href="css/style.css?x=3723457235" />
         <link type="text/css" rel="stylesheet" href="css/font-awesome.css" />
         <link type="text/css" rel="stylesheet" href="css/media.css" />        
     </head>
