--- a/src/index.html
+++ b/src/index.html
@@ -208,8 +208,9 @@
                                 <div class="span4">
                                     <div class="info">
                                         <div class="text">
-                                            <p>14471 Chamber Road, Suite 110</p>
-                                            <p>Tustin, CA 92780</p>
+                                            <p>1918 West Chapman Avenue</p>
+                                            <p>Suite #205</p>
+                                            <p>Orange, CA 92868</p>
                                             <p>714-633-7686</p>
                                             <p>&nbsp;</p>
                                             <p><a id="mc_em2"></a></p>
