Refresh medicare cards

--- a/src/index.html
+++ b/src/index.html
@@ -109,12 +109,16 @@
                         <div class="honors">
 							<ul class="clearfix">
                                 <li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
-                                <li><a href="http://www.medicare.gov"><img src="img/medicare_card.jpg" alt="Medicare" /></a></li>
+                                <li><a href="http://www.medicare.gov"><img src="img/new-med.jpg" alt="Medicare" /></a></li>
+                                <li><a href="http://www.medicare.gov"><img src="img/cal-med.png" alt="Medicare" /></a></li>
                                 <li><a href="http://www.ssa.gov"><img src="img/ssa.gif" alt="Social Secutiry" /></a></li>
-                                <li><div class="since">Service since 2002: <strong>Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties &amp; Las Vegas, NV</strong></br>
-                                    Speaks: <strong>English, Chinese, Spanish &amp; Portuguese</strong></div></li>
                             </ul>
-						</div>
+
+                            <ul class="clearfix">
+                                <div class="since">Service since 2002: <strong>Orange, Los Angeles, Riverside, San Bernardino &amp; San Diego Counties &amp; Las Vegas, NV</strong></br>
+                                    Speaks: <strong>English, Chinese, Spanish &amp; Portuguese</strong></div>
+                            </ul>
+                        </div>
 						<!-- /end award bar -->
 
 
