Fix medi-cal URL

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 							<ul class="clearfix">
                                 <li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
                                 <li><a href="http://www.medicare.gov"><img src="img/new-med.jpg" alt="Medicare" /></a></li>
-                                <li><a href="http://www.medicare.gov"><img src="img/cal-med.png" alt="Medicare" /></a></li>
+                                <li><a href="http://www.medi-cal.ca.gov"><img src="img/cal-med.png" alt="Medi-Cal" /></a></li>
                                 <li><a href="http://www.ssa.gov"><img src="img/ssa.gif" alt="Social Secutiry" /></a></li>
                             </ul>
 
