info_slides_mc change per MSC

--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                                         <li><i class="arr"></i>Prescription drug coverage helps limit drug costs.</li>
                                         <li><i class="arr"></i>Know the different choices of Plans available in your area.</li>
                                         <li><i class="arr"></i>Enroll at the right time. The Initial Enrollment Period (IEP).</li>
-                                        <li><i class="arr"></i>Review your choices yearly during Open Enrollment Period (OEP), October 15 to December 7.</li>
-                                        <li><i class="arr"></i>Special Election Period (SEP).</li>
+                                        <li><i class="arr"></i>Review Your Choices Yearly During Annual Enrollment Period (AEP), October 15 to December 7.</li>
+                                        <li><i class="arr"></i>Special Election Period (SEP) and Open Enrollement Period (OEP).</li>
                                         <li><i class="arr"></i>Review your present coverage - working beyond 65.</li>
                                     </ul>
                                 </div>
