--- a/index.html
+++ b/index.html
@@ -219,8 +219,6 @@
                                             <p><a href="https://www.google.com/maps/place/1918+W+Chapman+Ave,+Orange,+CA+92868/@33.7868969,-117.8752262,17z/data=!4m13!1m7!3m6!1s0x80dcd9d4325301e1:0xb188269829dc4450!2s1918+W+Chapman+Ave,+Orange,+CA+92868!3b1!8m2!3d33.7868925!4d-117.8730375!3m4!1s0x80dcd9d4325301e1:0xb188269829dc4450!8m2!3d33.7868925!4d-117.8730375?hl=en&authuser=0" target="_blank">Click here for map</a></p>
                                             <p>&nbsp;</p>
                                             <p>714-633-7686</p>
-                                            <p>&nbsp;</p>
-                                            <p><a id="mc_em2"></a></p>
                                         </div>
                                     </div>
                                 </div>
@@ -233,10 +231,27 @@
                                         </div>
                                     </div>
                                 </div>
+							</div>
+							<div class="row">
+                                <div class="span4">
+                                    <div class="info">
+                                        <div class="text">
+                                            <p><a id="mc_em2"></a></p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="span4">
+                                    <div class="info">
+                                        <div class="text">
+                                            <p><a href="http://JCIMedicareWorkshops.com" target="_blank">JCIMedicareWorkshops.com</a></p>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div class="contacts_shim">&nbsp;</div>
                                 <!-- /end address, phone & email -->
-							</div>
+                            </div>
 						</div>
 						<!-- /end contacts us -->
 
