--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                                     <div class="span8">
                                         <div class="contacts_block">
                                             <!-- edit phone number here -->
-                                            <div class="phone styler_color">CALL US NOW! &nbsp; <span>714-633-7686</span></div>
+                                            <div class="phone styler_color">CALL US NOW! &nbsp; <span>714-633-7686 / 657-201-8776 (Mobile)</span></div>
                                             <div class="clear"></div>
                                         </div>
                                     </div>
@@ -108,10 +108,10 @@
 						<!-- begin award bar -->
                         <div class="honors">
 							<ul class="clearfix">
-                                <li><a href="http://hbex.coveredca.com/"><img src="img/certified-agent-logo.jpg" alt="Covered California" /></a></li>
+                                <li></li>
                                 <li><a href="http://www.medicare.gov"><img src="img/new-med.jpg" alt="Medicare" /></a></li>
                                 <li><a href="http://www.medi-cal.ca.gov"><img src="img/cal-med.png" alt="Medi-Cal" /></a></li>
-                                <li><a href="http://www.ssa.gov"><img src="img/ssa.gif" alt="Social Secutiry" /></a></li>
+                                <li></li>
                             </ul>
 
                             <ul class="clearfix">
@@ -219,6 +219,7 @@
                                             <p><a href="https://www.google.com/maps/place/1918+W+Chapman+Ave,+Orange,+CA+92868/@33.7868969,-117.8752262,17z/data=!4m13!1m7!3m6!1s0x80dcd9d4325301e1:0xb188269829dc4450!2s1918+W+Chapman+Ave,+Orange,+CA+92868!3b1!8m2!3d33.7868925!4d-117.8730375!3m4!1s0x80dcd9d4325301e1:0xb188269829dc4450!8m2!3d33.7868925!4d-117.8730375?hl=en&authuser=0" target="_blank">Click here for map</a></p>
                                             <p>&nbsp;</p>
                                             <p>714-633-7686</p>
+                                            <p>657-201-8776 (Mobile)</p>
                                         </div>
                                     </div>
                                 </div>
