Remove physical address and reposition phone number

--- a/index.html
+++ b/index.html
@@ -210,23 +210,19 @@
                                 <div class="span4">
                                     <div class="info">
                                         <div class="text">
-                                            <p>1918 West Chapman Avenue</p>
-                                            <p>Suite #205</p>
-                                            <p><i>at S. Marks Way</i></p>
-                                            <p>Orange, CA 92868</p>
-                                            <p><a href="https://www.google.com/maps/place/1918+W+Chapman+Ave,+Orange,+CA+92868/@33.7868969,-117.8752262,17z/data=!4m13!1m7!3m6!1s0x80dcd9d4325301e1:0xb188269829dc4450!2s1918+W+Chapman+Ave,+Orange,+CA+92868!3b1!8m2!3d33.7868925!4d-117.8730375!3m4!1s0x80dcd9d4325301e1:0xb188269829dc4450!8m2!3d33.7868925!4d-117.8730375?hl=en&authuser=0" target="_blank">Click here for map</a></p>
-                                            <p>&nbsp;</p>
-                                            <p>714-633-7686</p>
-                                            <p>657-201-8776 (Mobile)</p>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="span4">
-                                    <div class="info">
-                                        <div class="text">
                                             <p><em>Mailing Address:</em></p>
                                             <p>PO Box 1833</p>
                                             <p>Tustin, CA 92781</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="span4">
+                                    <div class="info">
+                                        <div class="text">
+                                            <p><em>Phone:</em></p>
+                                            <p>714-633-7686</p>
+                                            <p>657-201-8776 (Mobile)</p>
                                         </div>
                                     </div>
                                 </div>
