Add disclaimer and remove JCI workshops

--- a/index.html
+++ b/index.html
@@ -187,6 +187,23 @@
                         </div>
                         <!-- /end faqs -->
 
+
+                        <!-- begin disclaimer -->
+                        <div id="disclaimer_marker"></div>
+						<div class="disclaimer">
+							<div class="row">
+                                <div class="caption styler_color">DISCLAIMER</div>
+							</div>
+							<div class="row">
+                                <div class="span12">
+                                    <div class="disclaimer_text">
+                                        We do not offer every plan available in your area. Any information we provide is limited to those plans we do not offer in your area. Please contact Medicare.gov or 1-800-MEDICARE to get information on all of your options.
+                                    </div>
+                                </div>
+                            </div>
+						</div>
+						<!-- /end disclaimer -->
+
                         <!-- begin contacts us -->
                         <div id="contact_marker"></div>
 						<div class="contacts">
@@ -220,7 +237,7 @@
                                 <div class="span4">
                                     <div class="info">
                                         <div class="text">
-                                            <p><em>Phone:</em></p>
+                                            <p><em>Phone:</em></p></
                                             <p>714-633-7686</p>
                                             <p>657-201-8776 (Mobile)</p>
                                         </div>
@@ -232,14 +249,6 @@
                                     <div class="info">
                                         <div class="text">
                                             <p><a id="mc_em2"></a></p>
-                                        </div>
-                                    </div>
-                                </div>
-
-                                <div class="span4">
-                                    <div class="info">
-                                        <div class="text">
-                                            <p><a href="http://JCIMedicareWorkshops.com" target="_blank">JCIMedicareWorkshops.com</a></p>
                                         </div>
                                     </div>
                                 </div>
