Fixed some styling issues

--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
                         <!-- begin faqs -->
                         <div id="medicare_marker"></div>
                         <div class="faq">
-                            <div class="caption styler_color">Ten Things You Should Know About Medicare</div>
+							<div class="row">
+                                <div class="caption styler_color">Ten Things You Should Know About Medicare</div>
+							</div>
                             <div class="categories">
                                 <!-- faqs category 1 -->
                                 <div class="category">
